# protolesshooks

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.rst  version.cmake
ci/appveyor/: set-env.bat
ci/travis/: install.sh
include/: plh_Def.h  plh_ExecutableBlockArena.h  plh_Hook.h  plh_ImportEnumerator.h  plh_ImportWriteProtection.h  plh_Leb128.h  plh_ModuleEnumerator.h  plh_Os.h  protolesshooks.h
samples/: CMakeLists.txt  params.cpp  sample_00_trivial.cpp  sample_01_params.cpp  sample_02_enum.cpp  sample_03_global.cpp  sample_04_modify.cpp  sample_05_block.cpp  seh.cpp  trivial.cpp
src/: CMakeLists.txt  plh_HookCommon.cpp  plh_HookCommon.h  plh_HookMgr.cpp  plh_HookMgr.h  plh_Hook_amd64_gcc.cpp  plh_Hook_amd64_msc.cpp  plh_Hook_x86.cpp  plh_ImportEnumerator.cpp  plh_ImportWriteProtection.cpp  plh_Leb128.cpp  plh_ModuleEnumerator.cpp  plh_Os.cpp  plh_ThreadState.cpp  plh_ThreadState.h  plh_thunk_amd64_gcc.asm  plh_thunk_amd64_msc.asm  plh_thunk_x86.asm  thunk_amd64_gcc.asm  thunk_amd64_gcc.cpp  thunk_amd64_msc.asm  thunk_amd64_msc.cpp  thunk_x86.asm  thunk_x86_gcc.asm  thunk_x86_gcc.cpp  thunk_x86_msc.asm  thunk_x86_msc.cpp
test/: CMakeLists.txt  main.cpp  seh.cpp  test_fastcall.cpp  test_main.cpp  test_regparm.cpp  test_seh.cpp  test_stdcall.cpp  test_thiscall.cpp
tools/: nasm-list-to-cpp.pl
